[backend] fix(security): fix potential security issue (#1782)
Co-authored-by: savacano28 <stephanya.casanova@filigran.io>